Fixed off-screen zoom-in issue by putting the map into a container with scrolling bars (when needed). Moved the coordinates to the sticky navbar so that they are always visible, even when zoomed in. Implemented exporting room features (permanent walls, swamps, controller, mineral, sources). Implemented removing buildings with shift+click (previously only right click was available).

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -443,18 +443,23 @@ input[type=number]::-webkit-outer-spin-button {
             }
         }
     }
+
+    .mapContainer {
+        position: relative;
+        overflow: auto;
+        margin: 15px 15px 0 15px;
+    }
     
     .map {
         position: relative;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 15px auto 0;
         width: 800px;
         height: 800px;
         box-shadow: rgba(0, 0, 0, 0.137) 0 12px 50px 0;
         background: rgb(48, 48, 48);
-        transform-origin: top center;
+        transform-origin: top left;
 
         .tile {
             display: flex;
@@ -524,24 +529,17 @@ input[type=number]::-webkit-outer-spin-button {
     }
 
     .stats-overlay {
-        position: absolute;
-        right: -90px;
-        padding: 5px;
-        display: inline-block;
-        background: rgba(16, 16, 16, 0.3);
-        color: #ccc;
-        z-index: 1;
+        margin-left: 20px;
+        font-size: 1.4em;
+        line-height: 1.7;
 
-        table {
-            width: 80px;
+        span:not(:first-child) {
+            margin-left: 10px;
         }
 
-        td {
-            text-align: center;
-            line-height: 21px;
-            padding-top: 0;
-            padding-bottom: 0;
-        }
+	.coordinate {
+	    width: 4em;
+	}
     }
 }
 
@@ -617,45 +615,45 @@ form.load-room {
 }
 
 kbd, .key {
-	display: inline;
-	display: inline-block;
-	min-width: 1em;
-	padding: .2em .3em;
-	font: normal .85em/1 "Lucida Grande", Lucida, Arial, sans-serif;
-	text-align: center;
-	text-decoration: none;
-	-moz-border-radius: .3em;
-	-webkit-border-radius: .3em;
-	border-radius: .3em;
-	border: none;
-	cursor: default;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
+    display: inline;
+    display: inline-block;
+    min-width: 1em;
+    padding: .2em .3em;
+    font: normal .85em/1 "Lucida Grande", Lucida, Arial, sans-serif;
+    text-align: center;
+    text-decoration: none;
+    -moz-border-radius: .3em;
+    -webkit-border-radius: .3em;
+    border-radius: .3em;
+    border: none;
+    cursor: default;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 kbd[title], .key[title] {
-	cursor: help;
+    cursor: help;
 }
 
 kbd, kbd.light, .light-keys kbd, .key.light, .light-keys .key {
-	background: rgb(250, 250, 250);
-	background: -moz-linear-gradient(top, rgb(210, 210, 210), rgb(255, 255, 255));
-	background: -webkit-gradient(linear, left top, left bottom, from(rgb(210, 210, 210)), to(rgb(255, 255, 255)));
-	color:  rgb(50, 50, 50);
-	text-shadow: 0 0 2px rgb(255, 255, 255);
-	-moz-box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
-	-webkit-box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
-	box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
+    background: rgb(250, 250, 250);
+    background: -moz-linear-gradient(top, rgb(210, 210, 210), rgb(255, 255, 255));
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(210, 210, 210)), to(rgb(255, 255, 255)));
+    color:  rgb(50, 50, 50);
+    text-shadow: 0 0 2px rgb(255, 255, 255);
+    -moz-box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
+    -webkit-box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
+    box-shadow: inset 0 0 1px rgb(255, 255, 255), inset 0 0 .4em rgb(200, 200, 200), 0 .1em 0 rgb(130, 130, 130), 0 .11em 0 rgba(0, 0, 0, .4), 0 .1em .11em rgba(0, 0, 0, .9);
 }
 
 kbd.dark, .dark-keys kbd, .key, .key.dark, .dark-keys .key {
-	background: rgb(80, 80, 80);
-	background: -moz-linear-gradient(top, rgb(60, 60, 60), rgb(80, 80, 80));
-	background: -webkit-gradient(linear, left top, left bottom, from(rgb(60, 60, 60)), to(rgb(80, 80, 80)));
-	color: rgb(250, 250, 250);
-	text-shadow: -1px -1px 0 rgb(70, 70, 70);
-	-moz-box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
-	-webkit-box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
-	box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
+    background: rgb(80, 80, 80);
+    background: -moz-linear-gradient(top, rgb(60, 60, 60), rgb(80, 80, 80));
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(60, 60, 60)), to(rgb(80, 80, 80)));
+    color: rgb(250, 250, 250);
+    text-shadow: -1px -1px 0 rgb(70, 70, 70);
+    -moz-box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
+    -webkit-box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 1px rgb(150, 150, 150), inset 0 -.05em .4em rgb(80, 80, 80), 0 .1em 0 rgb(30, 30, 30), 0 .1em .1em rgba(0, 0, 0, .3);
 }
